deprecate VOLPET and ECAT6  and X Windows support

--- a/documentation/release_4.1.htm
+++ b/documentation/release_4.1.htm
@@ -83,6 +83,12 @@
     </li>
 </ul>
 
+<h3>Deprecated functionality</h3>
+Support for the following will be removed in the next version:
+<ul>
+  <li>ECAT6 and VOLPET files</li>
+  <li>bitmap display using X Windows </li>
+</ul>
 
 <h3>Changed functionality</h3>
 <ul>
