--- a/documentation/release_4.1.htm
+++ b/documentation/release_4.1.htm
@@ -32,6 +32,11 @@
 
     <p>See also the <a href="https://github.com/UCL/STIR/milestone/3">GitHub milestone for v4.1</a></p>
 
+<h2>Patch release info</h2>
+<ul>
+  <li> 4.1.0 released 02/05/2021</li>
+</ul>
+
 <h2> Summary for end users (also to be read by developers)</h2>
 
 <h3>License change</h3>
