--- a/documentation/release_4.1.htm
+++ b/documentation/release_4.1.htm
@@ -35,6 +35,11 @@
 <h2>Patch release info</h2>
 <ul>
   <li> 4.1.0 released 02/05/2021</li>
+  <li> 4.1.1 released 06/05/2021
+    <ul>
+      <li><a href=https://github.com/UCL/STIR/pull/811>PR 881</a>  (correct scale factor for randoms-from-singles)</li>
+    </ul>
+  </li>
 </ul>
 
 <h2> Summary for end users (also to be read by developers)</h2>
