--- a/documentation/credits.htm
+++ b/documentation/credits.htm
@@ -99,21 +99,25 @@ Thielemans, Kris</p>
     Gillman, Ashley
 
 14. University of Leeds, UK
-    HKEM implementation
+    HKEM implementation and GE Signa PET/MR support
     Deidda, Daniel
+    Wadhwa, Palak
 
 15. National Physical Laboratory, UK
     HKEM improvements, list mode and projection functionalities for SPECT
     Deidda, Daniel
 
 16. University College London, UK
-    (2013-2020)
-    scatter updates, dynamic data updates, OPENMP, PLS prior, Siemens ECAT8 support etc
+    (2013-2021)
+    scatter updates, dynamic data updates, OPENMP, PLS and Relative Difference prior,
+    wrapping of NiftyPET projectors, Siemens ECAT8 and RDF9 support etc
     help with integration and general maintenance
     Brown, Richard
     Efthimiou, Nikos
     Tsai, Yu-jung
     Emond, Elise
+    Biguri, Ander
+    Twyman, Robert
     Thomas, Benjamin
     Thielemans, Kris
 
@@ -211,7 +215,7 @@ web site, as designed by Patrick Valente (Brunel).
 <hr>
 <!-- Created: Fri Jan 04  2002 -->
 <!-- hhmts start -->
-Last modified: Mon Jan 13 20:10:45 GMT 2014
+Last modified: May 07 GMT 2021
 <!-- hhmts end -->
   </body>
 </html>
