--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -61,6 +61,11 @@ To reflect this change, <code>Scanner::get_default_intrinsic_tilt()</code> has b
 Note: start angle was already supported for SPECT<br />
 Backward compatibility for reconstructed images can be achieved by setting the <tt>STIR_LEGACY_IGNORE_VIEW_OFFSET</tt> CMake option to <tt>ON</tt>. (However, copied sinogram data will then always have the offset set to 0, in contrast to earlier versions of STIR).
 </li>
+<li>
+    PoissonLogLikelihood Hessian methods have been corrected to reflect the concavity of the function. Hessian vector products now return non-positive voxels, if the vector (input) is non-negative.
+    STIR usages of these methods (OSSPS and SqrtHessianRowSum) have been updated to see no effective change in functionality.
+    However, calling the Hessian vector product methods, via python etc., will result in a change in functionality as the sign of the output voxel values has changed.
+</li>
 </ul>
 
 
