--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -155,6 +155,7 @@ Backward compatibility for reconstructed images can be achieved by setting the <
 	<li><tt>ROOT</tt> file I/O improvements. An entire entry's tree is no longer loaded by default and instead individual branches are loaded as needed.
     ROOT file event processing is now up to 4x faster. In addition, there is now an option to <tt>check energy window information</tt> (defaulting to on).
     Futhermore, added functionality to exclude true and unscattered event types from list mode processing. </li>
+<li>Reading of Interfile projection-data will now write a more explicit warning when the binary file is non-existent or empty (improving over the cryptic <tt>WARNING: read_data: error after reading from stream</tt> that we wrote before).</li>
 </ul>
 
 
