updated release notes
[ci skip]

--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -271,6 +271,8 @@ as used by <code>copy_to</code> and <code>fill_from</code>
     Overloaded <code>compute_total_ROI_values</code> and <code>compute_ROI_values_per_plane</code> functions to allow the passing of  a<code>VoxelsOnCartesianGrid</code> object instead of a <code>Shape3D</code> as the ROI shape.
     This allows the ROI volume to be constructed during preprocessing for multiple image analysis.
 </li>
+<li><code>KeyParser::parameter_info()</code> now outputs vectorised keys as well
+</li>
 </ul>
 
 
