--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -139,6 +139,12 @@ Backward compatibility for reconstructed images can be achieved by setting the <
 <li>
     Exposed <code>compute_total_ROI_values</code> and <code>ROIValues</code> via swig. Added python example <code>ROI_demo.py</code> to demonstrate usage.
 </li>
+<li>
+ <code>PatlakPlot::apply_linear_regression</code> now has the possibility to use weighted
+ linear regression, assuming that the TAC activity values (in units of <i>counts</i>)
+ Poisson distributed which is a reasonable approximation for OSEM images (although somewhat
+ dangerous for noisy data).
+</li>
 </ul>
 
 
