--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -144,6 +144,9 @@ Backward compatibility for reconstructed images can be achieved by setting the <
 <li>
     Exposed <code>compute_total_ROI_values</code> and <code>ROIValues</code> via swig. Added python example <code>ROI_demo.py</code> to demonstrate usage.
 </li>
+<li>
+  <code>calculate_attenuation_coefficients</code> utility now accepts an optional forward projection parameter file in the same format as the <code>forward_project</code> utility. Example usage has been added to <tt>src/recon_test_pack/simulate_data.sh</tt>.
+</li>
 </ul>
 
 
