add comparison operators to DetectionPosition

--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -297,6 +297,8 @@ as used by <code>copy_to</code> and <code>fill_from</code>
 </li>
 <li><code>KeyParser::parameter_info()</code> now outputs vectorised keys as well
 </li>
+<li><code>DetectionPosition</code> now has all comparison operators.
+</li>
 </ul>
 
 
