Python/MATLAB: use construct_proj_data_info
ProjDataInfoCTI is now renamed to construct_proj_data_info.
This happened a while ago but somehow these files weren't updated.

--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -94,7 +94,7 @@ Backward compatibility for reconstructed images can be achieved by setting the <
 
 <li> Python/MATLAB wrappers no longer have <code>ProjDataInfo::ProjDataInfoCTI</code>, use <code>ProjDataInfo::construct_proj_data_info</code> instead.
   However, this now returns an object of the appropriate (derived) type as opposed to just
-  <code>ProjDataInfo</code>. This should be transparant, except apparently for testing equality of objects.
+  <code>ProjDataInfo</code>. This should be transparent, except apparently for testing equality of objects.
 </li>
 </ul>
 
