--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -194,6 +194,8 @@ Backward compatibility for reconstructed images can be achieved by setting the <
   <li>
       Additional C++ demo demonstrating the use the objective function and gradient ascent optimisation, see <tt>examples/src/demo4_obj_fun.cxx</tt>.
   </li>
+<li>A few functions related to TOF were added to <code>ProjDataInfo</code> and <code>Scanner</code> for future compatibility. However, this release still does not support TOF. (Check the GitHub site for the relevant PR).
+</li>
 </ul>
 
 
