update credits [skip ci]

--- a/documentation/credits.htm
+++ b/documentation/credits.htm
@@ -122,7 +122,8 @@ Thielemans, Kris</p>
     Fisher, Jannis
 
 17. National Physical Laboratory, UK
-    HKEM improvements, list mode and projection functionalities for SPECT, improvements to "blocks on cylindrical"
+    HKEM improvements, list mode and projection functionalities for SPECT, improvements to "blocks on cylindrical",
+    radionuclide database and calibration functionality
     Deidda, Daniel
 
 18. University College London, UK
