[ci skip] cleanup and simplifications

--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -391,7 +391,7 @@ as used by <code>copy_to</code> and <code>fill_from</code>
 <ul>
     <li>store data in <code>ProjDataInMemory</code> in the same order as what is used by <code>copy_to</code> and <code>fill_from</code>. This enabled using straight-forward copy. (This change should not affect anyone, except if you relied on a specific order in the buffer before.)
     </li>
-    <li>Modification to <code>generate_image</code> by moving the <code>GenerateImage</code> class to it's own
+    <li>Modification to <code>generate_image</code> by moving the <code>GenerateImage</code> class to its own
         source and header files, enabling usage from other STIR utilities and tests.</li>
 </ul>
 
