--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -340,11 +340,21 @@ from the above):</H2>
       You will get a run-time exception if you forgot to do this.
     </li>
     <li>
-        Rotational changes to STIR's interface to ROOT files, <a href=https://github.com/UCL/STIR/pull/1012>PR #1012</a>. In previous versions (roughly) half a bucket,
-        <code>(module_repeater_y * submodule_repeater_y * crystal_repeater_y) /2 - 1)</code>
-        in the <tt>Cylindrical</tt> case, was subtracted from the crystalIDs, in an attempt to rotate
-        the scanner. However, this was incompatible with the STIR code to find normalisation factors,
-        and could be surprising for odd numbers etc.
+        Rotational changes to STIR's interface to ROOT files, <a href=https://github.com/UCL/STIR/pull/1012>PR #1012</a>
+        and <a href=https://github.com/UCL/STIR/pull/1016>PR #1016</a>.
+        <ul>
+            <li> In previous versions (roughly) half a bucket,
+            <code>(module_repeater_y * submodule_repeater_y * crystal_repeater_y) /2 - 1)</code>
+            in the <tt>Cylindrical</tt> case, was subtracted from the crystalIDs, in an attempt to rotate
+            the scanner. However, this was incompatible with the STIR code to find normalisation factors,
+            and could be surprising for odd numbers etc.</li>
+            <li>Similarly, the detector numbers of each ROOT event were offset by <code>quarter_of_detectors</code>.
+            This was because of the assumption that GATE the 0th crystal is on the on the x axis (STIR's is on y).
+            However, the usage of <code>quarter_of_detectors</code> requires the number of scanner
+            crystals/detectors to be factorisable by 4, which may not always be the case.
+            This addition of <code>quarter_of_detectors</code> has been removed and GATE scanners are expected
+            to be rotated by -90 degrees so the 0th crystal is on the on the y axis. </li>
+        </ul>
         Rotations should use the new view offset support described above.
         Backwards compatibility can be maintained with the CMake switch, <tt>STIR_ROOT_ROTATION_AS_V4</tt>.
     </li>
