update release notes [ci skip]

--- a/documentation/release_5.0.htm
+++ b/documentation/release_5.0.htm
@@ -73,16 +73,22 @@ improvements to the documentation.
   Markus Jehl (Positrigo), Gefei Chen (Univ of Macao)
 </p>
 
-    <h2>Patch release info</h2>
+<h2>Patch release info</h2>
+<ul>
+  <li> 5.0.0 released 23/03/2022</li>
+  <li> 5.0.1 released ???
     <ul>
-      <li> 5.0.0 released 23/03/2022</li>
-      <!--
-      <li> 4.0.1 released 28/04/2020
-        <ul>
-          <li><a href=https://github.com/UCL/STIR/pull/513>PR 513</a>  (suppress warnings with clang)</li>
-          </ul>
-          -->
+      <li><a href=https://github.com/UCL/STIR/pull/1019>PR 1019</a>: fixes for SWIG and hence Python interface.
+      </li>
+      <li>
+        <a href=https://github.com/UCL/STIR/pull/1012>PR #1012</a>
+        and <a href=https://github.com/UCL/STIR/pull/1016>PR #1016</a>:
+        rotational changes to STIR's interface to ROOT files, breaking compatibility with 4.x (and 5.0.0 but this was broken).
+        See below for more information.
+      </li>
     </ul>
+  </li>
+</ul>
 
 <h2> Summary for end users (also to be read by developers)</h2>
 
